--------------------------------------------------------------------------------
drkns 23.06.2021 23:34:45 +0100 - build 5833

1. Since 5804.1 didn't crash and burn, let's go further and poll once per minute if nothing else happens.

2. Remove polling from waitkey / ACTL_WAITKEY processing.

3. Forum: closing viewer/editor with F3/F4 should be more predictable now.

4. Forum: update edit history after changing the lock state.

5. Numpad should work in Windows Terminal now.

6. Refactoring.

--------------------------------------------------------------------------------
drkns 22.06.2021 02:19:01 +0100 - build 5832

1. New versions of fmt, tinyxml2, Catch2.

--------------------------------------------------------------------------------
drkns 20.06.2021 02:24:21 +0100 - build 5831

1. Loading plugins from file symlinks didn't work.

--------------------------------------------------------------------------------
drkns 19.06.2021 16:54:09 +0100 - build 5830

1. Limit the workaround for microsoft/terminal#10456 to specific Windows versions.

--------------------------------------------------------------------------------
svs 19.06.2021 10:15:41 +0100 - build 5829

1. SQLite 3.36.0

--------------------------------------------------------------------------------
drkns 18.06.2021 00:53:41 +0100 - build 5828

1. Don't apply fullwidth-aware rendering workarounds when not needed.

--------------------------------------------------------------------------------
drkns 17.06.2021 21:25:13 +0100 - build 5827

1. In far:config Alt+F4 edits integer values as binary.

--------------------------------------------------------------------------------
drkns 17.06.2021 02:05:29 +0100 - build 5826

1. Continue 5822.2. More experimental removals.

--------------------------------------------------------------------------------
drkns 16.06.2021 22:45:42 +0100 - build 5825

1. Correction of 5818.1.

--------------------------------------------------------------------------------