@@ -175,19 +175,6 @@ private:
 
 	static intptr_t AdvancedDlgProc(Dialog* Dlg, intptr_t Msg, intptr_t Param1, void* Param2);
 
-	void timer_start()
-	{
-		m_UpdateTimer = os::concurrency::timer(till_next_second(), 1s, []
-		{
-			message_manager::instance().notify(findfile_timer);
-		});
-	}
-
-	void timer_stop()
-	{
-		m_UpdateTimer = {};
-	}
-
 	// BUGBUG
 	bool AnySetFindList{};
 	bool CmpCase{};
@@ -226,7 +213,6 @@ private:
 	Dialog* m_ResultsDialogPtr{};
 	bool m_EmptyArc{};
 
-	static constexpr string_view findfile_timer = L"findfile_timer"sv;
 	os::concurrency::timer m_UpdateTimer;
 };
 
@@ -1522,7 +1508,7 @@ intptr_t FindFiles::FindDlgProc(Dialog* Dlg, intptr_t Msg, intptr_t Param1, void
 
 			if (m_Searcher->Finished() && m_Messages.empty())
 			{
-				timer_stop();
+				m_UpdateTimer = {};
 
 				Finalized = true;
 
@@ -2742,9 +2728,12 @@ bool FindFiles::FindFilesProcess()
 			// Deliberately empty. It doesn't have to do anything,
 			// its only purpose is waking up the main loop
 			// and generating KEY_NONE -> DN_ENTERIDLE to refresh the dialog.
-			SCOPED_ACTION(listener)(findfile_timer, []{});
+			listener Listener([]{});
 
-			timer_start();
+			m_UpdateTimer = os::concurrency::timer(till_next_second(), 1s, [&]
+			{
+				message_manager::instance().notify(Listener.GetEventName());
+			});
 
 			Dlg->Process();
 
