@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 24.06.2021 21:42:04 +0100 - build 5834
+
+1. Continue 5833 1 & 2.
+
+--------------------------------------------------------------------------------
 drkns 23.06.2021 23:34:45 +0100 - build 5833
 
 1. Since 5804.1 didn't crash and burn, let's go further and poll once per minute if nothing else happens.
